[project]
name = "bdd100k-dataset"
version = "0.1.0"
description = "Add a short description here"
authors = [{name = "Tejas Pandey", email = "tejas.pandey@york.ac.uk"}]
requires-python = ">= 3.8,<3.12"
dependencies = ["xxhash", "opencv-python"]


[project.optional-dependencies]
test = ["pytest"]


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[tool.pixi.project]
channels = ["nvidia", "pytorch", "conda-forge"]
platforms = ["linux-64"]


[tool.pixi.pypi-dependencies]
bdd100k-dataset = { path = ".", editable = true }
nvidia-dali-cuda120 = "*"


[tool.pixi.pypi-options]
extra-index-urls = ["https://pypi.nvidia.com"]


[tool.pixi.tasks]


[tool.pixi.dependencies]
cuda = { version = "*" }
pytorch = { version = "~=2.3.0", channel = "pytorch" }
pytorch-cuda = { version = "12.1", channel = "pytorch" }
orjson = ">=3.10.4,<3.11"
hydra-core = ">=1.3.2,<1.4"
numpy = "<2.0.0"
torchvision = ">=0.18.1,<0.19"
jupyter = ">=1.0.0,<1.1"
loguru = ">=0.7.2,<0.8"
icecream = ">=2.1.3,<2.2"
tqdm = ">=4.66.4,<4.67"
matplotlib = ">=3.8.4,<3.9"


[tool.pixi.environments]
default = {features = [], solve-group = "default"}
test = {features = ["test"], solve-group = "default"}


[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning",
]
